test/corpus/call_block.txt
================================================================================
Supports expr attribute
================================================================================
<%call expr="myfunc(x)"/>
--------------------------------------------------------------------------------

(source_file
  (call_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%call expr = "myfunc(x)" />
--------------------------------------------------------------------------------

(source_file
  (call_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long syntax
================================================================================
<%call expr="myfunc(x)"></%call>
--------------------------------------------------------------------------------

(source_file
  (call_block
    (attribute
      (identifier)
      (string))))

================================================================================
Can contain other blocks and HTML
================================================================================
<%call expr="myfunc(x)"><p>Hello, world!</p><%block></%block></%call>
--------------------------------------------------------------------------------

(source_file
  (call_block
    (attribute
      (identifier)
      (string))
    (injected_html)
    (general_block)))
