test/corpus/comment.txt
================================================================================
Can take up whole line
================================================================================
## Profound comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (injected_html))

================================================================================
Can come after other content
================================================================================
<p>other content</p> ## Profound comment

--------------------------------------------------------------------------------

(source_file
  (injected_html)
  (comment)
  (injected_html))

================================================================================
Space not required before prefix
================================================================================
<p>other content</p>## Profound comment

--------------------------------------------------------------------------------

(source_file
  (injected_html)
  (comment)
  (injected_html))

================================================================================
Space not required after prefix
================================================================================
<p>other content</p> ##Profound comment

--------------------------------------------------------------------------------

(source_file
  (injected_html)
  (comment)
  (injected_html))

================================================================================
Can have no content
================================================================================
##

--------------------------------------------------------------------------------

(source_file
  (comment)
  (injected_html))

================================================================================
Can end file without newline
================================================================================
##
--------------------------------------------------------------------------------

(source_file
  (comment))
