test/corpus/def_block.txt
================================================================================
Supports name attribute
================================================================================
<%def name="myfunc(x)"/>
--------------------------------------------------------------------------------

(source_file
  (def_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%def name = "myfunc(x)" />
--------------------------------------------------------------------------------

(source_file
  (def_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long syntax
================================================================================
<%def name="myfunc(x)"></%def>
--------------------------------------------------------------------------------

(source_file
  (def_block
    (attribute
      (identifier)
      (string))))

================================================================================
Can contain other blocks and HTML
================================================================================
<%def name="myfunc(x)"><p>Hello, world!</p><%block></%block></%def>
--------------------------------------------------------------------------------

(source_file
  (def_block
    (attribute
      (identifier)
      (string))
    (injected_html)
    (general_block)))
