test/corpus/doc_block.txt
================================================================================
Can be empty
================================================================================
<%doc/>
--------------------------------------------------------------------------------

(source_file
  (doc_block))

================================================================================
Extra spaces are okay
================================================================================
<%doc />
--------------------------------------------------------------------------------

(source_file
  (doc_block))

================================================================================
Can include content on same line
================================================================================
<%doc>asdf</%doc>
--------------------------------------------------------------------------------

(source_file
  (doc_block
    (doc)))

================================================================================
Can include content on multiple lines
================================================================================
<%doc>
  asdf
  asdf
</%doc>
--------------------------------------------------------------------------------

(source_file
  (doc_block
    (doc)))

================================================================================
Ignores comments inside
================================================================================
<%doc>
  asdf
  ## Should not be a comment
</%doc>
<p>asdf</p>
--------------------------------------------------------------------------------

(source_file
  (doc_block
    (doc))
  (injected_html))
