test/corpus/general_block.txt
================================================================================
Supports name attribute
================================================================================
<%block name="title"/>
--------------------------------------------------------------------------------

(source_file
  (general_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%block name = "title" />
--------------------------------------------------------------------------------

(source_file
  (general_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long syntax
================================================================================
<%block></%block>
--------------------------------------------------------------------------------

(source_file
  (general_block))

================================================================================
Can contain other blocks
================================================================================
<%block><%block></%block></%block>
--------------------------------------------------------------------------------

(source_file
  (general_block
    (general_block)))
