test/corpus/include.txt
================================================================================
Supports file attribute
================================================================================
<%include file="header.html"/>
--------------------------------------------------------------------------------

(source_file
  (include_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%include file = "header.html" />
--------------------------------------------------------------------------------

(source_file
  (include_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long syntax
================================================================================
<%include file="header.html"></%include>
--------------------------------------------------------------------------------

(source_file
  (include_block
    (attribute
      (identifier)
      (string))))
