test/corpus/newline-filter.txt
================================================================================
Interrupts HTML
================================================================================
<p>No newline \
here.</p>
--------------------------------------------------------------------------------

(source_file
  (injected_html)
  (newline_filter)
  (injected_html))

================================================================================
Must be at end of line
================================================================================
<p>No newline \ here.</p>
--------------------------------------------------------------------------------

(source_file
  (injected_html))
