test/corpus/page_block.txt
================================================================================
Supports file attribute
================================================================================
<%page args="x, y, z='default'"/>
--------------------------------------------------------------------------------

(source_file
  (page_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%page args = "x, y, z='default'" />
--------------------------------------------------------------------------------

(source_file
  (page_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long syntax
================================================================================
<%page args="x, y, z='default'"></%page>
--------------------------------------------------------------------------------

(source_file
  (page_block
    (attribute
      (identifier)
      (string))))

================================================================================
Supports multiple attributes
================================================================================
<%page cached="True" cache_type="memory"/>
--------------------------------------------------------------------------------

(source_file
  (page_block
    (attribute
      (identifier)
      (string))
    (attribute
      (identifier)
      (string))))
