test/corpus/python-block.txt
================================================================================
Python block
================================================================================
<%
x = 1
%>
--------------------------------------------------------------------------------

(source_file
  (python_block
    (injected_python)))
