test/corpus/text_block.txt
================================================================================
Supports file attribute
================================================================================
<%text header="h"/>
--------------------------------------------------------------------------------

(source_file
  (text_block
    (attribute
      (identifier)
      (string))))

================================================================================
Extra spaces are okay
================================================================================
<%text header = "h" />
--------------------------------------------------------------------------------

(source_file
  (text_block
    (attribute
      (identifier)
      (string))))

================================================================================
Attributes are optional
================================================================================
<%text/>
--------------------------------------------------------------------------------

(source_file
  (text_block))

================================================================================
Can include content on same line
================================================================================
<%text>asdf</%text>
--------------------------------------------------------------------------------

(source_file
  (text_block
    (text)))

================================================================================
Can include content on multiple lines
================================================================================
<%text>
  asdf
  asdf
</%text>
--------------------------------------------------------------------------------

(source_file
  (text_block
    (text)))

================================================================================
Ignores comments inside
================================================================================
<%text>
  asdf
  ## Should not be a comment
  newline filters \
  asdf
</%text>
<p>asdf</p>
--------------------------------------------------------------------------------

(source_file
  (text_block
    (text))
  (injected_html))
