test/corpus/user_block.txt
================================================================================
Supports short form
================================================================================
<%a:b/>
--------------------------------------------------------------------------------

(source_file
  (user_block
    (user_tag
      (identifier)
      (identifier))))

================================================================================
Supports attributes
================================================================================
<%a:b x="1"/>
--------------------------------------------------------------------------------

(source_file
  (user_block
    (user_tag
      (identifier)
      (identifier))
    (attribute
      (identifier)
      (string))))

================================================================================
Supports long form
================================================================================
<%a:b></%a:b>
--------------------------------------------------------------------------------

(source_file
  (user_block
    (user_tag
      (identifier)
      (identifier))
    (user_tag
      (identifier)
      (identifier))))

================================================================================
Supports long form with content
================================================================================
<%a:b><div>html here</div></%a:b>
--------------------------------------------------------------------------------

(source_file
  (user_block
    (user_tag
      (identifier)
      (identifier))
    (injected_html)
    (user_tag
      (identifier)
      (identifier))))

